# neural-net-coq-interp

./: .dir-locals.el  .envrc  .gitignore  .mailmap  LICENSE  Makefile  Makefile.coq.local  October_2023_Monthly_Algorithmic_Challenge_Sorted_List_Jason,_Thomas,_Rajashree.ipynb  October_2023_Monthly_Algorithmic_Challenge_Sorted_List_Jason,_Thomas,_Rajashree.py  October_2023_Monthly_Algorithmic_Challenge_Sorted_List_Rajashree_and_Jason.py  October_Challange_Submission.py  Prototyping Fully Formal Interpretability Arguments on Transformers.ipynb  README.md  _CoqProject  _CoqProjectDune  _CoqProjectDune.patch  coq-neural-net-interp-computed.opam  coq-neural-net-interp.opam  dune-project  flake.nix
.github/: dependabot.yml
etc/: ensure_stack_limit.sh
nix/: codium.nix  coq.nix  default.nix  emacs.nix  shell.nix
theories/: bug_search_anom_not_found_03.v  dune  max.v  max_all_logits.v  max_brute_force.v  max_heuristics.v  max_instances.v  max_parameters.v
training/: Makefile  Proving_How_A_Transformer_Takes_Max.py  analysis_utils.py  analyze_max2.py  analyze_max2_clean.py  analyze_maxn.py  analyze_maxn_clean.py  analyze_maxn_exploration.py  coq_export_utils.py  environment.yml  heuristic_max2_01_attention_independence.ipynb  heuristic_max2_01_attention_independence.py  interp_max_utils.py  interp_max_utils_heuristic.py  iterative_ilp.py  max_of_n.py  proof_max2_01_exhaustive.py  proof_max2_01_undertrained.py  requirements.txt  train_max_of_2.py  train_max_of_2_undertrained.py  train_max_of_5.py  train_max_of_n.py  training.py  training_utils.py  undertrained_max2.py  (+2 more)
(+167 files in other folders)
