opam-version: "2.0"
authors: [
  "Jason Gross <jgross@mit.edu>"
]
maintainer: "Jason Gross <jgross@mit.edu>"
homepage: "https://github.com/JasonGross/neural-net-coq-interp"
bug-reports: "https://github.com/JasonGross/neural-net-coq-interp/issues"
license: "MIT"
build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]
depends: [
  "dune" {>= "3.0"}
  "coq" {>= "8.17~" & ( < "8.18~" | > "8.18.0" )}
  "coq-record-update"
  "coq-flocq"
  "coq-interval"
  "coq-vcfloat"
  "coq-mathcomp-zify"
  "coq-mathcomp-algebra-tactics"
  "coq-laproof"
]
conflict-class: [
  "coq-neural-net-interp"
]
dev-repo: "git+https://github.com/JasonGross/neural-net-coq-interp.git"
synopsis: "Work in progress formalization of mechanistic interpretability arguments on tiny neural nets"
description: """
Work in progress formalization of mechanistic interpretability arguments on tiny neural nets
"""
tags: ["logpath:NeuralNetInterp"]
url {
  src: "git+https://github.com/JasonGross/neural-net-coq-interp.git#main"
}
